--- a/02_formatted_zone/01_to_formatted.ipynb
+++ b/02_formatted_zone/01_to_formatted.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data files present in the persistent zone: ['acled_20211224.csv', 'countries_20211224.csv', 'wbd_20220103.csv', 'wgi_20220101.dta']\n"
+      "Data files present in the persistent zone: ['countries_20220121.csv', 'wbd_20220122.csv', 'wgi_20220122.dta']\n"
      ]
     }
    ],
@@ -40,9 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wbd_20220122 succesfully loaded into the database.\n",
+      "Succesfully loaded the specified tables.\n"
+     ]
+    }
+   ],
    "source": [
     "db_url = 'postgresql+psycopg2://postgres:root@localhost:5432/adsdb'\n",
     "\n",
