--- a/exploration/exploration.ipynb
+++ b/exploration/exploration.ipynb
@@ -25,6 +25,363 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wbgapi as wb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indicators = wb.topic.members(3).union(wb.topic.members(11)).union(wb.topic.members(15)); indicators\n",
+    "countries = wb.region.members('CEA').union(wb.region.members('CSA')); # countries # Union since they are sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AAA',\n",
+       " 'BBB',\n",
+       " 'BG.GSR.NFSV.GD.ZS',\n",
+       " 'BM.GSR.CMCP.ZS',\n",
+       " 'BM.GSR.FCTY.CD',\n",
+       " 'BM.GSR.GNFS.CD',\n",
+       " 'BM.GSR.INSF.ZS',\n",
+       " 'BM.GSR.MRCH.CD',\n",
+       " 'BM.GSR.NFSV.CD',\n",
+       " 'BM.GSR.ROYL.CD',\n",
+       " 'BM.GSR.TOTL.CD',\n",
+       " 'BM.GSR.TRAN.ZS',\n",
+       " 'BM.GSR.TRVL.ZS',\n",
+       " 'BM.KLT.DINV.CD.WD',\n",
+       " 'BM.KLT.DINV.WD.GD.ZS',\n",
+       " 'BM.TRF.PRVT.CD',\n",
+       " 'BM.TRF.PWKR.CD.DT',\n",
+       " 'BN.CAB.XOKA.CD',\n",
+       " 'BN.CAB.XOKA.GD.ZS',\n",
+       " 'BN.FIN.TOTL.CD',\n",
+       " 'BN.GSR.FCTY.CD',\n",
+       " 'BN.GSR.GNFS.CD',\n",
+       " 'BN.GSR.MRCH.CD',\n",
+       " 'BN.KAC.EOMS.CD',\n",
+       " 'BN.KLT.DINV.CD',\n",
+       " 'BN.KLT.PTXL.CD',\n",
+       " 'BN.RES.INCL.CD',\n",
+       " 'BN.TRF.CURR.CD',\n",
+       " 'BN.TRF.KOGT.CD',\n",
+       " 'BX.GRT.EXTA.CD.WD',\n",
+       " 'BX.GRT.TECH.CD.WD',\n",
+       " 'BX.GSR.CCIS.CD',\n",
+       " 'BX.GSR.CCIS.ZS',\n",
+       " 'BX.GSR.CMCP.ZS',\n",
+       " 'BX.GSR.FCTY.CD',\n",
+       " 'BX.GSR.GNFS.CD',\n",
+       " 'BX.GSR.INSF.ZS',\n",
+       " 'BX.GSR.MRCH.CD',\n",
+       " 'BX.GSR.NFSV.CD',\n",
+       " 'BX.GSR.ROYL.CD',\n",
+       " 'BX.GSR.TOTL.CD',\n",
+       " 'BX.GSR.TRAN.ZS',\n",
+       " 'BX.GSR.TRVL.ZS',\n",
+       " 'BX.KLT.DINV.CD.WD',\n",
+       " 'BX.KLT.DINV.WD.GD.ZS',\n",
+       " 'BX.PEF.TOTL.CD.WD',\n",
+       " 'BX.TRF.CURR.CD',\n",
+       " 'BX.TRF.PWKR.CD',\n",
+       " 'BX.TRF.PWKR.CD.DT',\n",
+       " 'BX.TRF.PWKR.DT.GD.ZS',\n",
+       " 'DT.DOD.DECT.CD',\n",
+       " 'DT.DOD.DECT.GN.ZS',\n",
+       " 'DT.DOD.DSTC.IR.ZS',\n",
+       " 'DT.DOD.DSTC.XP.ZS',\n",
+       " 'DT.DOD.PVLX.CD',\n",
+       " 'DT.DOD.PVLX.EX.ZS',\n",
+       " 'DT.DOD.PVLX.GN.ZS',\n",
+       " 'DT.ODA.ODAT.CD',\n",
+       " 'DT.ODA.ODAT.GN.ZS',\n",
+       " 'DT.ODA.ODAT.PC.ZS',\n",
+       " 'DT.TDS.DECT.EX.ZS',\n",
+       " 'DT.TDS.DECT.GN.ZS',\n",
+       " 'EN.POP.SLUM.UR.ZS',\n",
+       " 'FI.RES.TOTL.CD',\n",
+       " 'FI.RES.XGLD.CD',\n",
+       " 'FP.CPI.TOTL.ZG',\n",
+       " 'GC.DOD.TOTL.GD.ZS',\n",
+       " 'GC.REV.XGRT.GD.ZS',\n",
+       " 'GC.XPN.TOTL.GD.ZS',\n",
+       " 'NE.CON.GOVT.CD',\n",
+       " 'NE.CON.GOVT.CN',\n",
+       " 'NE.CON.GOVT.KD',\n",
+       " 'NE.CON.GOVT.KD.ZG',\n",
+       " 'NE.CON.GOVT.KN',\n",
+       " 'NE.CON.GOVT.ZS',\n",
+       " 'NE.CON.PRVT.CD',\n",
+       " 'NE.CON.PRVT.CN',\n",
+       " 'NE.CON.PRVT.CN.AD',\n",
+       " 'NE.CON.PRVT.KD',\n",
+       " 'NE.CON.PRVT.KD.ZG',\n",
+       " 'NE.CON.PRVT.KN',\n",
+       " 'NE.CON.PRVT.PC.KD',\n",
+       " 'NE.CON.PRVT.PC.KD.ZG',\n",
+       " 'NE.CON.PRVT.PP.CD',\n",
+       " 'NE.CON.PRVT.PP.KD',\n",
+       " 'NE.CON.PRVT.ZS',\n",
+       " 'NE.CON.TOTL.CD',\n",
+       " 'NE.CON.TOTL.CN',\n",
+       " 'NE.CON.TOTL.KD',\n",
+       " 'NE.CON.TOTL.KD.ZG',\n",
+       " 'NE.CON.TOTL.KN',\n",
+       " 'NE.CON.TOTL.ZS',\n",
+       " 'NE.DAB.DEFL.ZS',\n",
+       " 'NE.DAB.TOTL.CD',\n",
+       " 'NE.DAB.TOTL.CN',\n",
+       " 'NE.DAB.TOTL.KD',\n",
+       " 'NE.DAB.TOTL.KN',\n",
+       " 'NE.DAB.TOTL.ZS',\n",
+       " 'NE.EXP.GNFS.CD',\n",
+       " 'NE.EXP.GNFS.CN',\n",
+       " 'NE.EXP.GNFS.KD',\n",
+       " 'NE.EXP.GNFS.KD.ZG',\n",
+       " 'NE.EXP.GNFS.KN',\n",
+       " 'NE.EXP.GNFS.ZS',\n",
+       " 'NE.GDI.FPRV.CN',\n",
+       " 'NE.GDI.FPRV.ZS',\n",
+       " 'NE.GDI.FTOT.CD',\n",
+       " 'NE.GDI.FTOT.CN',\n",
+       " 'NE.GDI.FTOT.KD',\n",
+       " 'NE.GDI.FTOT.KD.ZG',\n",
+       " 'NE.GDI.FTOT.KN',\n",
+       " 'NE.GDI.FTOT.ZS',\n",
+       " 'NE.GDI.STKB.CD',\n",
+       " 'NE.GDI.STKB.CN',\n",
+       " 'NE.GDI.STKB.KN',\n",
+       " 'NE.GDI.TOTL.CD',\n",
+       " 'NE.GDI.TOTL.CN',\n",
+       " 'NE.GDI.TOTL.KD',\n",
+       " 'NE.GDI.TOTL.KD.ZG',\n",
+       " 'NE.GDI.TOTL.KN',\n",
+       " 'NE.GDI.TOTL.ZS',\n",
+       " 'NE.IMP.GNFS.CD',\n",
+       " 'NE.IMP.GNFS.CN',\n",
+       " 'NE.IMP.GNFS.KD',\n",
+       " 'NE.IMP.GNFS.KD.ZG',\n",
+       " 'NE.IMP.GNFS.KN',\n",
+       " 'NE.IMP.GNFS.ZS',\n",
+       " 'NE.RSB.GNFS.CD',\n",
+       " 'NE.RSB.GNFS.CN',\n",
+       " 'NE.RSB.GNFS.KN',\n",
+       " 'NE.RSB.GNFS.ZS',\n",
+       " 'NE.TRD.GNFS.ZS',\n",
+       " 'NV.AGR.EMPL.KD',\n",
+       " 'NV.AGR.TOTL.CD',\n",
+       " 'NV.AGR.TOTL.CN',\n",
+       " 'NV.AGR.TOTL.KD',\n",
+       " 'NV.AGR.TOTL.KD.ZG',\n",
+       " 'NV.AGR.TOTL.KN',\n",
+       " 'NV.AGR.TOTL.ZS',\n",
+       " 'NV.FSM.TOTL.CN',\n",
+       " 'NV.FSM.TOTL.KN',\n",
+       " 'NV.IND.EMPL.KD',\n",
+       " 'NV.IND.MANF.CD',\n",
+       " 'NV.IND.MANF.CN',\n",
+       " 'NV.IND.MANF.KD',\n",
+       " 'NV.IND.MANF.KD.ZG',\n",
+       " 'NV.IND.MANF.KN',\n",
+       " 'NV.IND.MANF.ZS',\n",
+       " 'NV.IND.TOTL.CD',\n",
+       " 'NV.IND.TOTL.CN',\n",
+       " 'NV.IND.TOTL.KD',\n",
+       " 'NV.IND.TOTL.KD.ZG',\n",
+       " 'NV.IND.TOTL.KN',\n",
+       " 'NV.IND.TOTL.ZS',\n",
+       " 'NV.MNF.CHEM.ZS.UN',\n",
+       " 'NV.MNF.FBTO.ZS.UN',\n",
+       " 'NV.MNF.MTRN.ZS.UN',\n",
+       " 'NV.MNF.OTHR.ZS.UN',\n",
+       " 'NV.MNF.TECH.ZS.UN',\n",
+       " 'NV.MNF.TXTL.ZS.UN',\n",
+       " 'NV.SRV.EMPL.KD',\n",
+       " 'NV.SRV.TOTL.CD',\n",
+       " 'NV.SRV.TOTL.CN',\n",
+       " 'NV.SRV.TOTL.KD',\n",
+       " 'NV.SRV.TOTL.KD.ZG',\n",
+       " 'NV.SRV.TOTL.KN',\n",
+       " 'NV.SRV.TOTL.ZS',\n",
+       " 'NY.ADJ.AEDU.CD',\n",
+       " 'NY.ADJ.AEDU.GN.ZS',\n",
+       " 'NY.ADJ.DCO2.CD',\n",
+       " 'NY.ADJ.DCO2.GN.ZS',\n",
+       " 'NY.ADJ.DFOR.CD',\n",
+       " 'NY.ADJ.DFOR.GN.ZS',\n",
+       " 'NY.ADJ.DKAP.CD',\n",
+       " 'NY.ADJ.DKAP.GN.ZS',\n",
+       " 'NY.ADJ.DMIN.CD',\n",
+       " 'NY.ADJ.DMIN.GN.ZS',\n",
+       " 'NY.ADJ.DNGY.CD',\n",
+       " 'NY.ADJ.DNGY.GN.ZS',\n",
+       " 'NY.ADJ.DPEM.CD',\n",
+       " 'NY.ADJ.DPEM.GN.ZS',\n",
+       " 'NY.ADJ.DRES.GN.ZS',\n",
+       " 'NY.ADJ.ICTR.GN.ZS',\n",
+       " 'NY.ADJ.NNAT.CD',\n",
+       " 'NY.ADJ.NNAT.GN.ZS',\n",
+       " 'NY.ADJ.NNTY.CD',\n",
+       " 'NY.ADJ.NNTY.KD',\n",
+       " 'NY.ADJ.NNTY.KD.ZG',\n",
+       " 'NY.ADJ.NNTY.PC.CD',\n",
+       " 'NY.ADJ.NNTY.PC.KD',\n",
+       " 'NY.ADJ.NNTY.PC.KD.ZG',\n",
+       " 'NY.ADJ.SVNG.CD',\n",
+       " 'NY.ADJ.SVNG.GN.ZS',\n",
+       " 'NY.ADJ.SVNX.CD',\n",
+       " 'NY.ADJ.SVNX.GN.ZS',\n",
+       " 'NY.EXP.CAPM.KN',\n",
+       " 'NY.GDP.DEFL.KD.ZG',\n",
+       " 'NY.GDP.DEFL.ZS',\n",
+       " 'NY.GDP.DISC.CN',\n",
+       " 'NY.GDP.DISC.KN',\n",
+       " 'NY.GDP.FCST.CD',\n",
+       " 'NY.GDP.FCST.CN',\n",
+       " 'NY.GDP.FCST.KD',\n",
+       " 'NY.GDP.FCST.KN',\n",
+       " 'NY.GDP.MKTP.CD',\n",
+       " 'NY.GDP.MKTP.CN',\n",
+       " 'NY.GDP.MKTP.CN.AD',\n",
+       " 'NY.GDP.MKTP.KD',\n",
+       " 'NY.GDP.MKTP.KD.ZG',\n",
+       " 'NY.GDP.MKTP.KN',\n",
+       " 'NY.GDP.MKTP.PP.CD',\n",
+       " 'NY.GDP.MKTP.PP.KD',\n",
+       " 'NY.GDP.PCAP.CD',\n",
+       " 'NY.GDP.PCAP.CN',\n",
+       " 'NY.GDP.PCAP.KD',\n",
+       " 'NY.GDP.PCAP.KD.ZG',\n",
+       " 'NY.GDP.PCAP.KN',\n",
+       " 'NY.GDP.PCAP.PP.CD',\n",
+       " 'NY.GDP.PCAP.PP.KD',\n",
+       " 'NY.GDS.TOTL.CD',\n",
+       " 'NY.GDS.TOTL.CN',\n",
+       " 'NY.GDS.TOTL.ZS',\n",
+       " 'NY.GDY.TOTL.KN',\n",
+       " 'NY.GNP.ATLS.CD',\n",
+       " 'NY.GNP.MKTP.CD',\n",
+       " 'NY.GNP.MKTP.CN',\n",
+       " 'NY.GNP.MKTP.CN.AD',\n",
+       " 'NY.GNP.MKTP.KD',\n",
+       " 'NY.GNP.MKTP.KD.ZG',\n",
+       " 'NY.GNP.MKTP.KN',\n",
+       " 'NY.GNP.MKTP.PP.CD',\n",
+       " 'NY.GNP.MKTP.PP.KD',\n",
+       " 'NY.GNP.PCAP.CD',\n",
+       " 'NY.GNP.PCAP.CN',\n",
+       " 'NY.GNP.PCAP.KD',\n",
+       " 'NY.GNP.PCAP.KD.ZG',\n",
+       " 'NY.GNP.PCAP.KN',\n",
+       " 'NY.GNP.PCAP.PP.CD',\n",
+       " 'NY.GNP.PCAP.PP.KD',\n",
+       " 'NY.GNS.ICTR.CD',\n",
+       " 'NY.GNS.ICTR.CN',\n",
+       " 'NY.GNS.ICTR.GN.ZS',\n",
+       " 'NY.GNS.ICTR.ZS',\n",
+       " 'NY.GSR.NFCY.CD',\n",
+       " 'NY.GSR.NFCY.CN',\n",
+       " 'NY.GSR.NFCY.KN',\n",
+       " 'NY.TAX.NIND.CD',\n",
+       " 'NY.TAX.NIND.CN',\n",
+       " 'NY.TAX.NIND.KN',\n",
+       " 'NY.TRF.NCTR.CD',\n",
+       " 'NY.TRF.NCTR.CN',\n",
+       " 'NY.TRF.NCTR.KN',\n",
+       " 'NY.TTF.GNFS.KN',\n",
+       " 'PA.NUS.ATLS',\n",
+       " 'PA.NUS.PPP',\n",
+       " 'PA.NUS.PPPC.RF',\n",
+       " 'PA.NUS.PRVT.PP',\n",
+       " 'SE.ADT.1524.LT.FM.ZS',\n",
+       " 'SE.ENR.PRIM.FM.ZS',\n",
+       " 'SE.ENR.PRSC.FM.ZS',\n",
+       " 'SE.ENR.SECO.FM.ZS',\n",
+       " 'SE.ENR.TERT.FM.ZS',\n",
+       " 'SG.GEN.PARL.ZS',\n",
+       " 'SH.HIV.1524.FE.ZS',\n",
+       " 'SH.HIV.1524.MA.ZS',\n",
+       " 'SI.DST.02ND.20',\n",
+       " 'SI.DST.03RD.20',\n",
+       " 'SI.DST.04TH.20',\n",
+       " 'SI.DST.05TH.20',\n",
+       " 'SI.DST.10TH.10',\n",
+       " 'SI.DST.50MD',\n",
+       " 'SI.DST.FRST.10',\n",
+       " 'SI.DST.FRST.20',\n",
+       " 'SI.POV.DDAY',\n",
+       " 'SI.POV.GAPS',\n",
+       " 'SI.POV.GINI',\n",
+       " 'SI.POV.LMIC',\n",
+       " 'SI.POV.LMIC.GP',\n",
+       " 'SI.POV.MDIM',\n",
+       " 'SI.POV.MDIM.17',\n",
+       " 'SI.POV.MDIM.17.XQ',\n",
+       " 'SI.POV.MDIM.FE',\n",
+       " 'SI.POV.MDIM.HH',\n",
+       " 'SI.POV.MDIM.IT',\n",
+       " 'SI.POV.MDIM.MA',\n",
+       " 'SI.POV.MDIM.XQ',\n",
+       " 'SI.POV.NAHC',\n",
+       " 'SI.POV.UMIC',\n",
+       " 'SI.POV.UMIC.GP',\n",
+       " 'SI.SPR.PC40',\n",
+       " 'SI.SPR.PC40.ZG',\n",
+       " 'SI.SPR.PCAP',\n",
+       " 'SI.SPR.PCAP.ZG',\n",
+       " 'SL.EMP.VULN.FE.ZS',\n",
+       " 'SL.EMP.VULN.MA.ZS',\n",
+       " 'SL.TLF.0714.FE.ZS',\n",
+       " 'SL.TLF.0714.MA.ZS',\n",
+       " 'SL.TLF.0714.SW.FE.ZS',\n",
+       " 'SL.TLF.0714.SW.MA.ZS',\n",
+       " 'SL.TLF.0714.SW.ZS',\n",
+       " 'SL.TLF.0714.WK.FE.ZS',\n",
+       " 'SL.TLF.0714.WK.MA.ZS',\n",
+       " 'SL.TLF.0714.WK.ZS',\n",
+       " 'SL.TLF.0714.ZS',\n",
+       " 'SL.TLF.ACTI.1524.FE.ZS',\n",
+       " 'SL.TLF.ACTI.1524.MA.ZS',\n",
+       " 'SL.TLF.ACTI.1524.ZS',\n",
+       " 'SL.TLF.ACTI.FE.ZS',\n",
+       " 'SL.TLF.ACTI.MA.ZS',\n",
+       " 'SL.TLF.ACTI.ZS',\n",
+       " 'SL.TLF.CACT.FE.ZS',\n",
+       " 'SL.TLF.CACT.MA.ZS',\n",
+       " 'SL.UEM.TOTL.FE.ZS',\n",
+       " 'SL.UEM.TOTL.MA.ZS',\n",
+       " 'SM.POP.REFG',\n",
+       " 'SM.POP.REFG.OR',\n",
+       " 'SP.ADO.TFRT',\n",
+       " 'SP.DYN.LE00.FE.IN',\n",
+       " 'SP.DYN.LE00.MA.IN'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indicators.union({'AAA', 'BBB'})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
