--- a/01_landing_zone/01_wbd_api.ipynb
+++ b/01_landing_zone/01_wbd_api.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "31fd8d98",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "79fc825a",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "6753eb48",
    "metadata": {},
    "outputs": [
@@ -624,47 +624,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "758b163f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "indicators = wb.topic.members(11).union('SI_POV_GINI', 'NE_IMP_GNFS_KN', 'BX_GSR_GNFS_CD', 'NY_GDP_MKTP_CD', 'SP_ADO_TFRT', 'SL_TLF_0714_ZS', 'SP_DYN_LE00_FE_IN', 'SP_DYN_LE00_MA_IN')\n",
+    "indicators = wb.topic.members(11).union({'SI.POV.GINI', 'NE.IMP.GNFS.KN', 'BX.GSR.GNFS.CD', 'NY.GDP.MKTP.CD', 'SP.ADO.TFRT', 'SL.TLF.0714.ZS', 'SP.DYN.LE00.FE.IN', 'SP.DYN.LE00.MA.IN'})\n",
     "countries = wb.region.members('CEA').union(wb.region.members('CSA')) # Union since they are sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fc87eba8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "indicators"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "486dfa86",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ereve\\miniconda3\\envs\\adsdb\\lib\\site-packages\\pandas\\core\\indexing.py:1684: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  self.obj[key] = infer_fill_value(value)\n"
+      "{'SI.POV.UMIC', 'SI.POV.GINI', 'SI.POV.MDIM.FE', 'SL.TLF.0714.ZS', 'SI.DST.02ND.20', 'SI.POV.MDIM', 'SI.SPR.PCAP', 'SI.DST.10TH.10', 'SI.DST.FRST.20', 'SI.POV.MDIM.XQ', 'SI.DST.05TH.20', 'SI.SPR.PC40.ZG', 'SP.DYN.LE00.MA.IN', 'SI.DST.FRST.10', 'SI.SPR.PC40', 'BX.GSR.GNFS.CD', 'NY.GDP.MKTP.CD', 'SI.POV.MDIM.HH', 'EN.POP.SLUM.UR.ZS', 'SI.DST.04TH.20', 'SI.POV.DDAY', 'SI.DST.03RD.20', 'SI.POV.UMIC.GP', 'SI.POV.NAHC', 'SP.DYN.LE00.FE.IN', 'SI.DST.50MD', 'SI.POV.GAPS', 'SI.SPR.PCAP.ZG', 'SI.POV.MDIM.17', 'SI.POV.MDIM.MA', 'NE.IMP.GNFS.KN', 'SI.POV.LMIC', 'SI.POV.MDIM.IT', 'SP.ADO.TFRT', 'SI.POV.MDIM.17.XQ', 'SI.POV.LMIC.GP'}\n"
      ]
     }
    ],
    "source": [
-    "df = wb.data.DataFrame(indicators, countries, years, columns='series').reset_index() #   seconds"
+    "print(indicators)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
+   "id": "486dfa86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = wb.data.DataFrame(indicators, countries, years, columns='series').reset_index() #   1m 16.3s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "a625814a",
    "metadata": {},
    "outputs": [
@@ -691,25 +690,25 @@
        "      <th></th>\n",
        "      <th>economy</th>\n",
        "      <th>time</th>\n",
+       "      <th>BX.GSR.GNFS.CD</th>\n",
        "      <th>EN.POP.SLUM.UR.ZS</th>\n",
+       "      <th>NE.IMP.GNFS.KN</th>\n",
+       "      <th>NY.GDP.MKTP.CD</th>\n",
        "      <th>SI.DST.02ND.20</th>\n",
        "      <th>SI.DST.03RD.20</th>\n",
        "      <th>SI.DST.04TH.20</th>\n",
        "      <th>SI.DST.05TH.20</th>\n",
-       "      <th>SI.DST.10TH.10</th>\n",
-       "      <th>SI.DST.50MD</th>\n",
-       "      <th>SI.DST.FRST.10</th>\n",
        "      <th>...</th>\n",
-       "      <th>SI.POV.MDIM.IT</th>\n",
-       "      <th>SI.POV.MDIM.MA</th>\n",
-       "      <th>SI.POV.MDIM.XQ</th>\n",
-       "      <th>SI.POV.NAHC</th>\n",
        "      <th>SI.POV.UMIC</th>\n",
        "      <th>SI.POV.UMIC.GP</th>\n",
        "      <th>SI.SPR.PC40</th>\n",
        "      <th>SI.SPR.PC40.ZG</th>\n",
        "      <th>SI.SPR.PCAP</th>\n",
        "      <th>SI.SPR.PCAP.ZG</th>\n",
+       "      <th>SL.TLF.0714.ZS</th>\n",
+       "      <th>SP.ADO.TFRT</th>\n",
+       "      <th>SP.DYN.LE00.FE.IN</th>\n",
+       "      <th>SP.DYN.LE00.MA.IN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -767,8 +766,8 @@
        "      <td>YR2002</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.053000e+09</td>\n",
+       "      <td>512000000.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -791,8 +790,8 @@
        "      <td>YR2003</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.046000e+09</td>\n",
+       "      <td>524000000.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -815,8 +814,8 @@
        "      <td>YR2004</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>9.110000e+08</td>\n",
+       "      <td>509000000.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -835,49 +834,49 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
+       "<p>5 rows × 38 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  economy    time  EN.POP.SLUM.UR.ZS  SI.DST.02ND.20  SI.DST.03RD.20  \\\n",
-       "0     ASM  YR2000                NaN             NaN             NaN   \n",
-       "1     ASM  YR2001                NaN             NaN             NaN   \n",
-       "2     ASM  YR2002                NaN             NaN             NaN   \n",
-       "3     ASM  YR2003                NaN             NaN             NaN   \n",
-       "4     ASM  YR2004                NaN             NaN             NaN   \n",
+       "  economy    time  BX.GSR.GNFS.CD  EN.POP.SLUM.UR.ZS  NE.IMP.GNFS.KN  \\\n",
+       "0     ASM  YR2000             NaN                NaN             NaN   \n",
+       "1     ASM  YR2001             NaN                NaN             NaN   \n",
+       "2     ASM  YR2002             NaN                NaN    1.053000e+09   \n",
+       "3     ASM  YR2003             NaN                NaN    1.046000e+09   \n",
+       "4     ASM  YR2004             NaN                NaN    9.110000e+08   \n",
        "\n",
-       "   SI.DST.04TH.20  SI.DST.05TH.20  SI.DST.10TH.10  SI.DST.50MD  \\\n",
-       "0             NaN             NaN             NaN          NaN   \n",
-       "1             NaN             NaN             NaN          NaN   \n",
-       "2             NaN             NaN             NaN          NaN   \n",
-       "3             NaN             NaN             NaN          NaN   \n",
-       "4             NaN             NaN             NaN          NaN   \n",
+       "   NY.GDP.MKTP.CD  SI.DST.02ND.20  SI.DST.03RD.20  SI.DST.04TH.20  \\\n",
+       "0             NaN             NaN             NaN             NaN   \n",
+       "1             NaN             NaN             NaN             NaN   \n",
+       "2     512000000.0             NaN             NaN             NaN   \n",
+       "3     524000000.0             NaN             NaN             NaN   \n",
+       "4     509000000.0             NaN             NaN             NaN   \n",
        "\n",
-       "   SI.DST.FRST.10  ...  SI.POV.MDIM.IT  SI.POV.MDIM.MA  SI.POV.MDIM.XQ  \\\n",
-       "0             NaN  ...             NaN             NaN             NaN   \n",
-       "1             NaN  ...             NaN             NaN             NaN   \n",
-       "2             NaN  ...             NaN             NaN             NaN   \n",
-       "3             NaN  ...             NaN             NaN             NaN   \n",
-       "4             NaN  ...             NaN             NaN             NaN   \n",
+       "   SI.DST.05TH.20  ...  SI.POV.UMIC  SI.POV.UMIC.GP  SI.SPR.PC40  \\\n",
+       "0             NaN  ...          NaN             NaN          NaN   \n",
+       "1             NaN  ...          NaN             NaN          NaN   \n",
+       "2             NaN  ...          NaN             NaN          NaN   \n",
+       "3             NaN  ...          NaN             NaN          NaN   \n",
+       "4             NaN  ...          NaN             NaN          NaN   \n",
        "\n",
-       "   SI.POV.NAHC  SI.POV.UMIC  SI.POV.UMIC.GP  SI.SPR.PC40  SI.SPR.PC40.ZG  \\\n",
-       "0          NaN          NaN             NaN          NaN             NaN   \n",
-       "1          NaN          NaN             NaN          NaN             NaN   \n",
-       "2          NaN          NaN             NaN          NaN             NaN   \n",
-       "3          NaN          NaN             NaN          NaN             NaN   \n",
-       "4          NaN          NaN             NaN          NaN             NaN   \n",
+       "   SI.SPR.PC40.ZG  SI.SPR.PCAP  SI.SPR.PCAP.ZG  SL.TLF.0714.ZS  SP.ADO.TFRT  \\\n",
+       "0             NaN          NaN             NaN             NaN          NaN   \n",
+       "1             NaN          NaN             NaN             NaN          NaN   \n",
+       "2             NaN          NaN             NaN             NaN          NaN   \n",
+       "3             NaN          NaN             NaN             NaN          NaN   \n",
+       "4             NaN          NaN             NaN             NaN          NaN   \n",
        "\n",
-       "   SI.SPR.PCAP  SI.SPR.PCAP.ZG  \n",
-       "0          NaN             NaN  \n",
-       "1          NaN             NaN  \n",
-       "2          NaN             NaN  \n",
-       "3          NaN             NaN  \n",
-       "4          NaN             NaN  \n",
+       "   SP.DYN.LE00.FE.IN  SP.DYN.LE00.MA.IN  \n",
+       "0                NaN                NaN  \n",
+       "1                NaN                NaN  \n",
+       "2                NaN                NaN  \n",
+       "3                NaN                NaN  \n",
+       "4                NaN                NaN  \n",
        "\n",
-       "[5 rows x 31 columns]"
+       "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "bdf64b3d",
    "metadata": {},
    "outputs": [
@@ -898,9 +897,49 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 741 entries, 0 to 740\n",
-      "Columns: 319 entries, economy to SP_DYN_LE00_MA_IN\n",
-      "dtypes: float64(317), int32(1), object(1)\n",
-      "memory usage: 1.8+ MB\n"
+      "Data columns (total 38 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   economy            741 non-null    object \n",
+      " 1   time               741 non-null    object \n",
+      " 2   BX.GSR.GNFS.CD     606 non-null    float64\n",
+      " 3   EN.POP.SLUM.UR.ZS  69 non-null     float64\n",
+      " 4   NE.IMP.GNFS.KN     492 non-null    float64\n",
+      " 5   NY.GDP.MKTP.CD     698 non-null    float64\n",
+      " 6   SI.DST.02ND.20     128 non-null    float64\n",
+      " 7   SI.DST.03RD.20     128 non-null    float64\n",
+      " 8   SI.DST.04TH.20     128 non-null    float64\n",
+      " 9   SI.DST.05TH.20     128 non-null    float64\n",
+      " 10  SI.DST.10TH.10     128 non-null    float64\n",
+      " 11  SI.DST.50MD        96 non-null     float64\n",
+      " 12  SI.DST.FRST.10     128 non-null    float64\n",
+      " 13  SI.DST.FRST.20     128 non-null    float64\n",
+      " 14  SI.POV.DDAY        128 non-null    float64\n",
+      " 15  SI.POV.GAPS        128 non-null    float64\n",
+      " 16  SI.POV.GINI        128 non-null    float64\n",
+      " 17  SI.POV.LMIC        128 non-null    float64\n",
+      " 18  SI.POV.LMIC.GP     128 non-null    float64\n",
+      " 19  SI.POV.MDIM        7 non-null      float64\n",
+      " 20  SI.POV.MDIM.17     6 non-null      float64\n",
+      " 21  SI.POV.MDIM.17.XQ  5 non-null      float64\n",
+      " 22  SI.POV.MDIM.FE     1 non-null      float64\n",
+      " 23  SI.POV.MDIM.HH     8 non-null      float64\n",
+      " 24  SI.POV.MDIM.IT     7 non-null      float64\n",
+      " 25  SI.POV.MDIM.MA     1 non-null      float64\n",
+      " 26  SI.POV.MDIM.XQ     11 non-null     float64\n",
+      " 27  SI.POV.NAHC        112 non-null    float64\n",
+      " 28  SI.POV.UMIC        128 non-null    float64\n",
+      " 29  SI.POV.UMIC.GP     128 non-null    float64\n",
+      " 30  SI.SPR.PC40        22 non-null     float64\n",
+      " 31  SI.SPR.PC40.ZG     10 non-null     float64\n",
+      " 32  SI.SPR.PCAP        22 non-null     float64\n",
+      " 33  SI.SPR.PCAP.ZG     10 non-null     float64\n",
+      " 34  SL.TLF.0714.ZS     34 non-null     float64\n",
+      " 35  SP.ADO.TFRT        646 non-null    float64\n",
+      " 36  SP.DYN.LE00.FE.IN  649 non-null    float64\n",
+      " 37  SP.DYN.LE00.MA.IN  649 non-null    float64\n",
+      "dtypes: float64(36), object(2)\n",
+      "memory usage: 220.1+ KB\n"
      ]
     }
    ],
@@ -910,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "2c5036c3",
    "metadata": {},
    "outputs": [],
@@ -937,12 +976,12 @@
    ],
    "source": [
     "regions = ['CEA', 'CSA']\n",
-    "\"wbd_{}_{}_{}.csv\".format(topic, regions, years)"
+    "\"wbd_{}_{}_{}.csv\".format('aaa', regions, years)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "50456d41",
    "metadata": {},
    "outputs": [
@@ -950,36 +989,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ereve\\AppData\\Local\\Temp/ipykernel_6688/3432526311.py:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "C:\\Users\\ereve\\AppData\\Local\\Temp/ipykernel_2356/1309434137.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  df.columns = df.columns.str.replace(\".\", \"_\")\n"
      ]
     }
    ],
    "source": [
-    "df.columns = df.columns.str.replace(\".\", \"_\")"
+    "df = pd.read_csv(os.path.join(persistent, \"wbd_20220122.csv\"))\n",
+    "df.columns = df.columns.str.replace(\".\", \"_\")\n",
+    "df.columns = map(str.lower, df.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "f17e3e80",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['economy', 'time', 'BG_GSR_NFSV_GD_ZS', 'BM_GSR_CMCP_ZS',\n",
-       "       'BM_GSR_FCTY_CD', 'BM_GSR_GNFS_CD', 'BM_GSR_INSF_ZS', 'BM_GSR_MRCH_CD',\n",
-       "       'BM_GSR_NFSV_CD', 'BM_GSR_ROYL_CD',\n",
-       "       ...\n",
-       "       'SL_TLF_ACTI_ZS', 'SL_TLF_CACT_FE_ZS', 'SL_TLF_CACT_MA_ZS',\n",
-       "       'SL_UEM_TOTL_FE_ZS', 'SL_UEM_TOTL_MA_ZS', 'SM_POP_REFG',\n",
-       "       'SM_POP_REFG_OR', 'SP_ADO_TFRT', 'SP_DYN_LE00_FE_IN',\n",
-       "       'SP_DYN_LE00_MA_IN'],\n",
-       "      dtype='object', length=319)"
+       "Index(['economy', 'time', 'bx_gsr_gnfs_cd', 'en_pop_slum_ur_zs',\n",
+       "       'ne_imp_gnfs_kn', 'ny_gdp_mktp_cd', 'si_dst_02nd_20', 'si_dst_03rd_20',\n",
+       "       'si_dst_04th_20', 'si_dst_05th_20', 'si_dst_10th_10', 'si_dst_50md',\n",
+       "       'si_dst_frst_10', 'si_dst_frst_20', 'si_pov_dday', 'si_pov_gaps',\n",
+       "       'si_pov_gini', 'si_pov_lmic', 'si_pov_lmic_gp', 'si_pov_mdim',\n",
+       "       'si_pov_mdim_17', 'si_pov_mdim_17_xq', 'si_pov_mdim_fe',\n",
+       "       'si_pov_mdim_hh', 'si_pov_mdim_it', 'si_pov_mdim_ma', 'si_pov_mdim_xq',\n",
+       "       'si_pov_nahc', 'si_pov_umic', 'si_pov_umic_gp', 'si_spr_pc40',\n",
+       "       'si_spr_pc40_zg', 'si_spr_pcap', 'si_spr_pcap_zg', 'sl_tlf_0714_zs',\n",
+       "       'sp_ado_tfrt', 'sp_dyn_le00_fe_in', 'sp_dyn_le00_ma_in'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "d23b5628",
    "metadata": {},
    "outputs": [],
@@ -1004,6 +1047,27 @@
    "metadata": {},
    "source": [
     "WGI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "aabf70b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "dg = pd.read_csv(os.path.join(persistent, \"countries_20220121.csv\"), on_bad_lines='skip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c69e740c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dg.to_csv(os.path.join(persistent, \"countries_20220121.csv\"), index=False)"
    ]
   },
   {
