--- a/formatted_zone/01_to_formatted.ipynb
+++ b/formatted_zone/01_to_formatted.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Connect to Local Database and store data files from the persistent landing zone in it."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,15 +18,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Connect to Local Database and store data files from the persistent landing zone in it."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -54,8 +54,7 @@
    ],
    "source": [
     "db_url = 'postgresql+psycopg2://postgres:root@localhost:5432/adsdb'\n",
-    "\n",
-    "tables_to_load(persistent_data, persistent, db_url)"
+    "tables_to_load(persistent_data, persistent, db_url, replace=True)"
    ]
   }
  ],
