--- a/landing_zone/01_wbd_api.ipynb
+++ b/landing_zone/01_wbd_api.ipynb
@@ -122,7 +122,7 @@
    "id": "8be4570a",
    "metadata": {},
    "source": [
-    "Store the data in the temporal folder:"
+    "Store the data in the persistent folder:"
    ]
   },
   {
