--- a/landing_zone/02_landing.ipynb
+++ b/landing_zone/02_landing.ipynb
@@ -39,6 +39,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Move and rename all the files into the persistent folder:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
