--- a/trusted_zone/01_trusted_integration.ipynb
+++ b/trusted_zone/01_trusted_integration.ipynb
@@ -12,37 +12,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "db_url = 'postgresql+psycopg2://postgres:root@localhost:5432/adsdb'\n",
-    "integrate_source_versions('wbd', db_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "integrate_source_versions('wgi', db_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "integrate_source_versions('countries', db_url, source_name='countries_dim')"
+    "sources = {'wbd': None, 'wgi': None, 'countries': 'countries_dim'}\n",
+    "\n",
+    "for source in sources:\n",
+    "    if sources[source]:\n",
+    "        integrate_source_versions(source, db_url, source_name=sources[source])\n",
+    "    else:\n",
+    "        integrate_source_versions(source, db_url)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "profile again just in case"
+    "Entity resolution proof of concept:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AND': 'ADO', 'TGO': 'TOG', 'MSR': 'MAT'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set1 = ['AND', 'TGO', 'MSR']\n",
+    "set2 = ['ADO', 'TOG', 'MAT']\n",
+    "entity_resolution(set1, set2)"
    ]
   }
  ],
