--- a/analysis/exploration.ipynb
+++ b/analysis/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,41 +15,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_url = 'postgresql+psycopg2://postgres:root@localhost:5432/postgres'\n",
+    "db_url = 'postgresql+psycopg2://postgres:root@localhost:5432/cluster_countries'\n",
     "engine = create_engine(db_url)\n",
     "conn = engine.connect()\n",
-    "inspector = inspect(engine)\n",
-    "inspector.get_table_names()\n",
-    "df = pd.read_sql_table('WGI_20220101', conn)"
+    "stmnt = \"select * from wgi wg, countries_dim cd, wbd wb, years_dim yd where wg.code = cd.iso and wg.year = yd.id  and wb.economy = cd.iso and wb.time = yd.id;\"\n",
+    "dataframe = pd.read_sql(stmnt, conn)\n",
+    "conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess(df, years = [2000, 2008, 2006]):\n",
+    "def preprocess(dataframe, years = [2000, 2008, 2016]):\n",
     "    \"\"\"\n",
     "    Remove rows that only contain NA's, impute the others. Applies dimension reduction to two dimensions. Rename index to countryname and year.\n",
     "    \n",
     "    input: dataframe, list of years to analyze\n",
     "    output: list of preprocessed dataframes per year\n",
     "    \"\"\"\n",
+    "    from sklearn import preprocessing\n",
     "    from sklearn.impute import SimpleImputer\n",
-    "\n",
+    "    \n",
+    "    df = dataframe.copy()\n",
     "    df['year'] = df['year'].astype(str)\n",
+    "    df.drop(['time', 'economy', 'code', 'iso', 'continent', 'id'], axis=1)\n",
     "    numeric_cols = df.select_dtypes(include=np.number).columns.tolist()\n",
     "\n",
     "    keep = df[numeric_cols].dropna(how = 'all').index\n",
     "    df = df.iloc[keep,]\n",
     "\n",
-    "    df_name_year = df.filter(items=['countryname', 'year']).reset_index(drop=True)\n",
+    "    df_name_year = df.filter(items=['country_name', 'year']).reset_index(drop=True)\n",
     "    df_num = df[numeric_cols].reset_index(drop=True)\n",
+    "    scaler = preprocessing.StandardScaler().fit(df_num)\n",
+    "    df_num = pd.DataFrame(scaler.transform(df_num), columns = df_num.columns)\n",
     "\n",
     "    imp_mean = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
     "    imp_mean.fit(df_num)\n",
@@ -57,7 +62,7 @@
     "\n",
     "    df = df_name_year.join(df_num)\n",
     "\n",
-    "    df[\"country_year\"] = df[\"year\"].astype(str) + '_' + df[\"countryname\"]\n",
+    "    df[\"country_year\"] = df[\"year\"] + '_' + df[\"country_name\"]\n",
     "    index = df[\"country_year\"]\n",
     "    df = df.set_index(index)  \n",
     "\n",
@@ -73,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,45 +88,73 @@
     "    input: List of dataframes, number of desired clusters per dataframe\n",
     "    output: \n",
     "    \"\"\"\n",
-    "    import math\n",
+    "    import os \n",
     "    from sklearn.decomposition import PCA\n",
     "    from sklearn.cluster import KMeans\n",
     "    from sklearn.cluster import DBSCAN\n",
     "    import matplotlib.pyplot as plt\n",
-    "    from seaborn import lmplot\n",
-    "    from ipywidgets import interact\n",
-    "    %matplotlib inline\n",
+    "    import plotly.express as px\n",
     "\n",
-    "    clustered_df = []\n",
+    "    cwd = os.getcwd()\n",
+    "    report_path = os.path.join(cwd, \"cluster_results\")\n",
     "\n",
-    "    for idx,df in enumerate(list_of_dataframes):\n",
-    "\n",
+    "    for df in list_of_dataframes:\n",
+    "        ### ANALYSIS\n",
+    "        data = df.copy()\n",
     "        pca = PCA(n_components=2)\n",
     "\n",
     "        index = df.index\n",
-    "        X =pca.fit_transform(df)\n",
+    "        pca =pca.fit(df)\n",
+    "        X = pca.transform(df)\n",
     "\n",
     "        pca_res = pd.DataFrame(data = X\n",
     "                    , columns = ['pc1', 'pc2'])\n",
-    "                    \n",
+    "        \n",
+    "        # Calculate loadings\n",
+    "        loadings = pca.components_.T * np.sqrt(pca.explained_variance_)\n",
+    "        loadings_df = pd.DataFrame(abs(loadings))          \n",
     "        df = pca_res.set_index(index)\n",
     "\n",
-    "        kmeans = KMeans(n_clusters=nr_of_clusters, random_state=0).fit(df)\n",
-    "        df['cluster'] = kmeans.labels_\n",
+    "        # Calculate clusters\n",
+    "        kmeans = KMeans(n_clusters=nr_of_clusters, n_init = 50).fit(df)\n",
+    "        df['cluster'] = kmeans.labels_.astype(str)\n",
+    "        df_with_countryname = df.copy()\n",
+    "        df_with_countryname['country'] = df_with_countryname.index\n",
     "\n",
-    "        clustered_df.append(df)\n",
-    "\n",
-    "        lmplot(x='pc1', y='pc2', data=df, hue='cluster', fit_reg=False)\n",
-    "\n",
+    "        ### REPORT\n",
+    "        \n",
+    "        \n",
+    "        #Create plots\n",
+    "        fig = px.scatter(df_with_countryname, x='pc1', y='pc2', color=\"cluster\", text = 'country')\n",
+    "        notable_dim_1 = []\n",
+    "        notable_dim_2 = []\n",
     "        year = df.index[0].split(\"_\")[0]\n",
-    "\n",
-    "        plt.title('{}'.format(year))\n",
-    "        plt.savefig(\"clusters_{}.png\".format(year)) \n",
-    "\n",
-    "        for idx2,clus in enumerate(range(nr_of_clusters)):\n",
-    "            groups = list(df[df['cluster'] == clus].index)\n",
-    "            print(groups)\n",
-    "    "
+    "        for i, feature in enumerate(data.columns):\n",
+    "            if loadings[i, 0] > loadings_df[0].quantile(0.7): notable_dim_1.append(feature)\n",
+    "            elif loadings[i, 1] > loadings_df[1].quantile(0.7): notable_dim_2.append(feature)\n",
+    "        image_path = report_path + '\\{}_cluster_plot.html'.format(year)\n",
+    "        fig.write_html(image_path)\n",
+    "        \n",
+    "        #Create Text Output Report\n",
+    "        txt_path = report_path + '\\{}_PCA_report.txt'.format(year)\n",
+    "        f = open(txt_path, \"a\")\n",
+    "        f.truncate(0)\n",
+    "        print('Notable dimensions for PCA I are: {}'.format(notable_dim_1), file = f)\n",
+    "        print('Notable dimensions for PCA II are: {}'.format(notable_dim_2), file = f)\n",
+    "        for clus in range(nr_of_clusters):\n",
+    "            groups = list(df[df['cluster'] == str(clus)].index)\n",
+    "            print(\"cluster {} : {}\".format(clus, groups), file = f)\n",
+    "        f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = preprocess(dataframe)\n",
+    "df = cluster(df, 5)"
    ]
   }
  ],
