--- a/analysis/exploration.ipynb
+++ b/analysis/exploration.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess(dataframe, years = [2000, 2008, 2016]):\n",
+    "def preprocess(dataframe, years = [2005, 2009, 2011]):\n",
     "    \"\"\"\n",
     "    Remove rows that only contain NA's, impute the others. Applies dimension reduction to two dimensions. Rename index to countryname and year.\n",
     "    \n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
     "    \"\"\"\n",
     "    Cluster each dataframe in list.\n",
     "    input: List of dataframes, number of desired clusters per dataframe\n",
-    "    output: \n",
+    "    output: Generates two reports for each year: An interactive html plot with the clustered countries and a text file profiling the PCA dimensions & clusters. \n",
     "    \"\"\"\n",
     "    import os \n",
     "    from sklearn.decomposition import PCA\n",
@@ -123,7 +123,6 @@
     "\n",
     "        ### REPORT\n",
     "        \n",
-    "        \n",
     "        #Create plots\n",
     "        fig = px.scatter(df_with_countryname, x='pc1', y='pc2', color=\"cluster\", text = 'country')\n",
     "        notable_dim_1 = []\n",
@@ -139,17 +138,30 @@
     "        txt_path = report_path + '\\{}_PCA_report.txt'.format(year)\n",
     "        f = open(txt_path, \"a\")\n",
     "        f.truncate(0)\n",
+    "        print('-----------------------------------------------', file = f)\n",
     "        print('Notable dimensions for PCA I are: {}'.format(notable_dim_1), file = f)\n",
     "        print('Notable dimensions for PCA II are: {}'.format(notable_dim_2), file = f)\n",
+    "        print('-----------------------------------------------', file = f)\n",
     "        for clus in range(nr_of_clusters):\n",
     "            groups = list(df[df['cluster'] == str(clus)].index)\n",
+    "            mean_pc1 = np.mean(list(df[df['cluster'] == str(clus)].pc1))\n",
+    "            mean_pc2 = np.mean(list(df[df['cluster'] == str(clus)].pc2))\n",
     "            print(\"cluster {} : {}\".format(clus, groups), file = f)\n",
+    "            print(\"cluster mean for pc1: {}\".format(mean_pc1), file = f)\n",
+    "            print(\"cluster mean for pc2: {}\".format(mean_pc2), file = f)\n",
+    "            print('-----------------------------------------------', file = f)\n",
+    "        print('ATTRIBUTE INFORMARTION:', file = f)\n",
+    "        with open(\"metadata.txt\") as f2:\n",
+    "            for line in f2:\n",
+    "                f.write(line)\n",
+    "            print('/n', file = f)\n",
+    "        print('-----------------------------------------------', file = f)\n",
     "        f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
