--- a/formatted_zone/02_data_quality.ipynb
+++ b/formatted_zone/02_data_quality.ipynb
@@ -5,15 +5,7 @@
    "id": "a8f8c3cc",
    "metadata": {},
    "source": [
-    "# Profiling & Outlier Detection"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8a41a7ac",
-   "metadata": {},
-   "source": [
-    "### Please run file chunk by chunk"
+    "# Profiling"
    ]
   },
   {
