--- a/analysis/01_analysis.ipynb
+++ b/analysis/01_analysis.ipynb
@@ -35,7 +35,8 @@
    "source": [
     "def preprocess(dataframe, years = [2005, 2009, 2011]):\n",
     "    \"\"\"\n",
-    "    Remove rows that only contain NA's, impute the others. Applies dimension reduction to two dimensions. Rename index to countryname and year.\n",
+    "    Remove rows that only contain NA's, impute the others. Applies dimension reduction to two dimensions. Rename index to countryname and year. \n",
+    "    Finally, split the data into seperate dataframes per year.\n",
     "    \n",
     "    input: dataframe, list of years to analyze\n",
     "    output: list of preprocessed dataframes per year\n",
