--- a/trusted_zone/01_trusted_integration.ipynb
+++ b/trusted_zone/01_trusted_integration.ipynb
@@ -23,36 +23,7 @@
     "    if sources[source]:\n",
     "        integrate_source_versions(source, db_url, source_name=sources[source])\n",
     "    else:\n",
-    "        integrate_source_versions(source, db_url)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Entity resolution proof of concept:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'AND': 'ADO', 'TGO': 'TOG', 'MSR': 'MAT'}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set1 = ['AND', 'TGO', 'MSR']\n",
-    "set2 = ['ADO', 'TOG', 'MAT']\n",
-    "entity_resolution(set1, set2)"
+    "        integrate_source_versions(source, db_url)"
    ]
   }
  ],
