--- a/formatted_zone/01_to_formatted.ipynb
+++ b/formatted_zone/01_to_formatted.ipynb
@@ -46,7 +46,9 @@
     }
    ],
    "source": [
-    "db_url = 'postgresql+psycopg2://postgres:root@localhost:5432/adsdb'\n",
+    "name = 'name'\n",
+    "password = 'password'\n",
+    "db_url = 'postgresql+psycopg2://postgres:{}@localhost:5432/{}'.format(password, name)\n",
     "tables_to_load(persistent_data, persistent, db_url, replace=True)"
    ]
   }
