--- a/trusted_zone/01_trusted_integration.ipynb
+++ b/trusted_zone/01_trusted_integration.ipynb
@@ -16,7 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_url = 'postgresql+psycopg2://postgres:root@localhost:5432/adsdb'\n",
+    "name = 'name'\n",
+    "password = 'password'\n",
+    "db_url = 'postgresql+psycopg2://postgres:{}@localhost:5432/{}'.format(password, name)\n",
     "sources = {'wbd': None, 'wgi': None, 'countries': 'countries_dim'}\n",
     "\n",
     "for source in sources:\n",
