--- a/formatted_zone/02_data_quality.ipynb
+++ b/formatted_zone/02_data_quality.ipynb
@@ -44,7 +44,9 @@
     }
    ],
    "source": [
-    "db_url = 'postgresql+psycopg2://postgres:root@localhost:5432/adsdb'\n",
+    "name = 'name'\n",
+    "password = 'password'\n",
+    "db_url = 'postgresql+psycopg2://postgres:{}@localhost:5432/{}'.format(password, name)\n",
     "outliers_duplicated_profiling(db_url, replace=False, outlier_treatment='na', delete_duplic_rows=True, delete_duplic_cols=False)"
    ]
   }
